# berseker-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
BersekerApp/: CMakeLists.txt
BersekerApp/src/: main.cpp
BersekerApp/src/Scenes/: Scene1.cpp  Scene1.h  Scene1_UIController.hpp
BersekerApp/src/Scenes/BVolumesTesting/: Scene.cpp  Scene.h  SceneUIController.cpp  SceneUIController.h
BersekerEditor/: CMakeLists.txt
BersekerEditor/src/: EditorApplication.cpp  EditorApplication.h  EditorCameraController.cpp  main.cpp
BersekerEditor/src/UI/Implementation/: UIRendererImpl_GL_GLFW.cpp  UIRendererImpl_GL_GLFW.h
BersekerEngine/: CMakeLists.txt
BersekerEngine/scripts/: shader_resources_generator.py
BersekerEngine/src/: Application.cpp  Application.h  LightSource.h  Scene.h  Utils.h
BersekerEngine/src/Collision/: BVolumes.cpp  BVolumes.h  BoundingVolumes.cpp  BoundingVolumes.h  Collider.cpp  Collider.h  ColliderLoader.cpp  ColliderLoader.h
BersekerEngine/src/ECS/: ECS.cpp  ECS.h
BersekerEngine/src/ECS/Components/: Collider.h  ColliderComponent.h  Components.h  Identifier.h  Material.h  Material.hpp
BersekerEngine/src/Input/: InputKeys.h
BersekerEngine/src/Rendering/: Camera.hpp  GridLine.hpp  LightSourceBillboard.h  Material.hpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Skybox.cpp  Utils.h
BersekerEngine/src/Rendering/GraphicsAPI/: CubeMapTexture.hpp  FrameBuffer.h  IndexBuffer.hpp  OpenGL.hpp  ShaderProgram.cpp  Texture2D.hpp  VertexArray.hpp
BersekerEngine/src/Rendering/Primitives/: Primitives.h  Renderer.cpp  Renderer.h
BersekerEngine/src/ResourceLoaders/: ShaderRegistry.cpp  ShaderResources.cpp  ShaderResources.h
BersekerEngine/src/UI/: UIRenderer.h
BersekerEngine/src/UI/Controls/: UITransform3D.cpp  UITransform3D.h
BersekerEngine/src/UI/Implementation/: UIRendererImpl_GL_GLFW.cpp  UIRendererImpl_GL_GLFW.h
BersekerEngine/src/Window/GLFW/: GLFWWindow.cpp
BersekerTesting/: CMakeLists.txt
BersekerTesting/src/Scenes/: BVolumesScene.cpp  BVolumesScene.h
BersekerTesting/src/Scenes/BVolumes/: Scene.cpp  Scene.h  SceneUIController.cpp
Editor/: CMakeLists.txt
Editor/src/: EditorApplication.cpp  EditorApplication.h  EditorCameraController.cpp  EditorCameraController.h  main.cpp
Editor/src/UI/: LoggerView.hpp  Views.cpp
Editor/src/UI/Implementation/: UIRendererImpl_GL_GLFW.h
Engine/: CMakeLists.txt
Engine/scripts/: shader_resources_generator.py
Engine/src/: Application.cpp  Application.h
Engine/src/Collision/: BVH.cpp  BVH.h  BVolumes.cpp  BVolumes.h
Engine/src/Core/: Debug.h  Logger.h  Memory.h
Engine/src/Core/Window/: Window.h
Engine/src/Core/Window/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Engine/src/ECS/: ECS.h
Engine/src/ECS/Components/: ColliderComponent.h  Identifier.h
Engine/src/Ecs/: Component.h  ComponentSet.h  Components.cpp  Components.h  Entity.cpp  Entity.h  Registry.cpp  Registry.h
Engine/src/Physics/: Collider.cpp  Collider.h  ColliderLoader.cpp  ColliderLoader.h
Engine/src/Physics/Boundings/: BVolumes.h
Engine/src/Physics/Partitioning/: BVH.cpp  BVH.h
Engine/src/Rendering/: Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Skybox.h  Utils.cpp
Engine/src/Rendering/GraphicsAPI/: FrameBuffer.cpp  IndexBuffer.hpp  OpenGL.cpp  ShaderProgram.h  VertexArray.hpp
Engine/src/Rendering/Primitives/: Renderer.cpp
Engine/src/ResourceLoaders/: ShaderResources.cpp  ShaderResources.h
Engine/src/Scene/: Scene.h
Engine/src/Scene/Components/: BVolumeComponent.h  ColliderComponent.h  Components.h  LightSource.h  Transform.h
Engine/src/Utils/: Logger.h
Engine/src/Window/GLFW/: GLFWWindow.h
Testing/: CMakeLists.txt
Testing/src/Scenes/: BVHScene.cpp  BVHScene.h  BVolumesScene.cpp  BVolumesScene.h  CollisionScene.cpp  CollisionScene.h  GJKScene.cpp  GJKScene.h  Random.h  TestingScene.cpp  TestingScene.h  Timer.h
editor/: CMakeLists.txt
editor/src/: EditorApplication.cpp  EditorApplication.h  EditorCameraController.cpp
editor/src/Controllers/: EditorCameraController.cpp  EditorCameraController.h
editor/src/Core/: Layout.h  UIRendererImpl_GL_GLFW.cpp  UIRendererImpl_GL_GLFW.h  View.h
editor/src/UI/: UIRendererBackend.h  Views.h
editor/src/Views/: LinearLayout.cpp  LinearLayout.h  LoggerView.hpp
engine/: CMakeLists.txt
engine/scripts/: shader_resources_generator.py
engine/src/: Application.h
engine/src/Core/: Logger.cpp
engine/src/Core/DataStructures/: SparseSet.cpp  SparseSet.h
engine/src/Core/Window/: Window.h
engine/src/Ecs/: Component.cpp  Registry.cpp  Registry.h
engine/src/Physics/Boundings/: BVolumes.cpp
engine/src/Physics/Partitioning/: BVH.cpp  BVH.h
engine/src/Rendering/: LightSourceBillboard.cpp  Mesh.h  Model.h  Renderer.cpp  Renderer.h  Utils.h
engine/src/ResourceLoaders/: ShaderRegistry.h  ShaderResources.cpp
example/: CMakeLists.txt
example/src/Scenes/: BVHScene.cpp  BVHScene.h  GJKScene.cpp  GJKScene.h  TestingScene.cpp
res/colliders/: Cube.collider  StanfordArmadillo.collider  StanfordBunny.collider
res/models/: F1 low poly.mtl
res/shaders/: 3DModel.frag.glsl  3DModel.vert.glsl  Collider.frag.glsl  Collider.vert.glsl  GridLine.vert.glsl  LightSource.frag.glsl  LightSource.vert.glsl  LightedModel.frag.glsl  LightedModel.vert.glsl  Model3D.frag.glsl  Primitive.frag.glsl  Primitive.vert.glsl
resources/colliders/: Monkey.collider  StanfordDragon.collider
resources/shaders/: Collider.frag.glsl  GridLine.frag.glsl  LightSource.vert.glsl  Model3D.frag.glsl  Skybox.frag.glsl  Skybox.vert.glsl
scripts/: bootstrap.sh  build.sh  cleanup.sh  constants.env  run.sh  shader_resources_generator.py
src/: Application.cpp  Application.h  Scene.h  Utils.h  main.cpp
src/Graphics/: GridLine.hpp  Mesh.h  Model.cpp  Model.h
src/Graphics/OpenGL/: IndexBuffer.hpp  OpenGL.hpp  ShaderProgram.cpp  ShaderProgram.h  VertexArray.hpp
src/Input/: InputManager.h
src/Rendering/: GridLine.hpp  Model.h  Renderer.h
src/TestScene/: MainScene.cpp  MainScene.h
src/Window/: Window.h
src/Window/GLFW/: GLFWWindow.h
(+13 files in other folders)
