cmake_minimum_required(VERSION 3.1)

set(BERSEKER_TESTING_BINARY BersekerTesting)
set(BERSEKER_TESTING_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(BERSEKER_TESTING_SOURCE_DIR ${BERSEKER_TESTING_ROOT_DIR}/src)

set(
    BERSEKER_TESTING_SOURCES
    ${BERSEKER_TESTING_SOURCE_DIR}/Scenes/BVolumes/Scene.h
    ${BERSEKER_TESTING_SOURCE_DIR}/Scenes/BVolumes/Scene.cpp
)

add_library(
    ${BERSEKER_TESTING_BINARY}
    ${BERSEKER_TESTING_SOURCES}
)

target_link_libraries(
    ${BERSEKER_TESTING_BINARY}
    BersekerEngine
)

target_include_directories(
    ${BERSEKER_TESTING_BINARY}
    PUBLIC ${BERSEKER_TESTING_SOURCE_DIR}/
)